@@ -1,4 +1,4 @@
-/**
+/*
  * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
@@ -17,6 +17,8 @@ import static org.openhab.core.addon.marketplace.internal.community.CommunityMar
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.text.SimpleDateFormat;
@@ -66,7 +68,8 @@ public class CommunityTransformationAddonHandler implements MarketplaceAddonHand
 
     @Activate
     public CommunityTransformationAddonHandler(final @Reference StorageService storageService) {
-        this.storage = storageService.getStorage("org.openhab.marketplace.transformation");
+        this.storage = storageService.getStorage("org.openhab.marketplace.transformation",
+                this.getClass().getClassLoader());
 
         this.yamlMapper = new ObjectMapper(new YAMLFactory());
         yamlMapper.findAndRegisterModules();
@@ -131,7 +134,12 @@ public class CommunityTransformationAddonHandler implements MarketplaceAddonHand
     }
 
     private String downloadTransformation(String urlString) throws IOException {
-        URL u = new URL(urlString);
+        URL u;
+        try {
+            u = (new URI(urlString)).toURL();
+        } catch (IllegalArgumentException | URISyntaxException e) {
+            throw new IOException(e);
+        }
         try (InputStream in = u.openStream()) {
             return new String(in.readAllBytes(), StandardCharsets.UTF_8);
         }
