@@ -1,4 +1,4 @@
-/**
+/*
  * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
@@ -126,7 +126,7 @@ public class AutomationCommandList extends AutomationCommand {
             }
             if (getLocale) {
                 String l = parameterValue;
-                locale = new Locale(l);
+                locale = Locale.of(l);
                 getLocale = false;
             }
             if (getId && getLocale) {
