@@ -1,4 +1,4 @@
-/**
+/*
  * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
@@ -354,7 +354,7 @@ public class GenericItemProvider extends AbstractProvider<Item>
                 // Single valued lists get unwrapped to just their one value for
                 // backwards compatibility
                 if (value instanceof List listValue && listValue.size() == 1) {
-                    value = listValue.get(0);
+                    value = listValue.getFirst();
                 }
                 configuration.put(p.getKey(), value);
             });
