@@ -1,4 +1,4 @@
-/**
+/*
  * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
@@ -67,7 +67,7 @@ public class EnrichedItemDTOMapperWithTransformOSGiTest extends JavaOSGiTest {
         assertThat(sd.getMaximum(), is(BigDecimal.valueOf(100)));
         assertThat(sd.getStep(), is(BigDecimal.valueOf(10)));
         assertThat(sd.getPattern(), is("%d °C"));
-        assertThat(sd.getOptions().get(0).getValue(), is("SOUND"));
-        assertThat(sd.getOptions().get(0).getLabel(), is("My great sound."));
+        assertThat(sd.getOptions().getFirst().getValue(), is("SOUND"));
+        assertThat(sd.getOptions().getFirst().getLabel(), is("My great sound."));
     }
 }
