@@ -1,4 +1,4 @@
-/**
+/*
  * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
@@ -68,7 +68,7 @@ public class ThingChannelsTest extends JavaOSGiTest {
 
     @Test
     public void testAutoUpdatePolicyNotSetOnNewChannels() {
-        Channel channel = ChannelBuilder.create(new ChannelUID(THING_UID, CHANNEL_IDS.get(0)), null).build();
+        Channel channel = ChannelBuilder.create(new ChannelUID(THING_UID, CHANNEL_IDS.getFirst()), null).build();
         assertNull(channel.getAutoUpdatePolicy());
     }
 }
