@@ -1,4 +1,4 @@
-/**
+/*
  * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
@@ -152,7 +152,7 @@ public class ThingFactoryTest extends JavaOSGiTest {
         assertThat(thing.getConfiguration().get("testProperty"), is(not(nullValue())));
         assertThat(thing.getConfiguration().get("testProperty"), is(equalTo("default")));
         assertThat(thing.getChannels().size(), is(equalTo(2)));
-        assertThat(thing.getChannels().get(0).getConfiguration().get("testProperty"), is(equalTo("default")));
+        assertThat(thing.getChannels().getFirst().getConfiguration().get("testProperty"), is(equalTo("default")));
         assertThat(thing.getChannels().get(1).getConfiguration().get("testProperty"), is(equalTo("default")));
         assertThat(thing.getProperties().size(), is(0));
     }
@@ -214,10 +214,9 @@ public class ThingFactoryTest extends JavaOSGiTest {
         assertThat(thing.getConfiguration().get("p4"), is(nullValue()));
         assertThat(thing.getConfiguration().get("p5"), is(instanceOf(List.class)));
         assertThat(((List<?>) thing.getConfiguration().get("p5")).size(), is(1));
-        assertThat(((List<?>) thing.getConfiguration().get("p5")).get(0), is(instanceOf(BigDecimal.class)));
-        assertThat(
-                ((BigDecimal) ((List<?>) thing.getConfiguration().get("p5")).get(0)).compareTo(new BigDecimal("2.3")),
-                is(0));
+        assertThat(((List<?>) thing.getConfiguration().get("p5")).getFirst(), is(instanceOf(BigDecimal.class)));
+        assertThat(((BigDecimal) ((List<?>) thing.getConfiguration().get("p5")).getFirst())
+                .compareTo(new BigDecimal("2.3")), is(0));
         assertThat(thing.getConfiguration().get("p6"), is(instanceOf(List.class)));
         assertThat(((List<?>) thing.getConfiguration().get("p6")).size(), is(3));
         assertThat(thing.getProperties().size(), is(0));
@@ -246,11 +245,11 @@ public class ThingFactoryTest extends JavaOSGiTest {
         Thing thing = ThingFactory.createThing(thingType, new ThingUID(thingType.getUID(), "thingId"), configuration);
 
         assertThat(thing.getChannels().size(), is(2));
-        assertThat(thing.getChannels().get(0).getUID().toString(), is(equalTo("bindingId:thingType:thingId:ch1")));
-        assertThat(thing.getChannels().get(0).getAcceptedItemType(), is(equalTo(CoreItemFactory.COLOR)));
-        assertThat(thing.getChannels().get(0).getDefaultTags().contains("tag1"), is(true));
-        assertThat(thing.getChannels().get(0).getDefaultTags().contains("tag2"), is(true));
-        assertThat(thing.getChannels().get(0).getDefaultTags().contains("tag3"), is(false));
+        assertThat(thing.getChannels().getFirst().getUID().toString(), is(equalTo("bindingId:thingType:thingId:ch1")));
+        assertThat(thing.getChannels().getFirst().getAcceptedItemType(), is(equalTo(CoreItemFactory.COLOR)));
+        assertThat(thing.getChannels().getFirst().getDefaultTags().contains("tag1"), is(true));
+        assertThat(thing.getChannels().getFirst().getDefaultTags().contains("tag2"), is(true));
+        assertThat(thing.getChannels().getFirst().getDefaultTags().contains("tag3"), is(false));
         assertThat(thing.getChannels().get(1).getDefaultTags().contains("tag1"), is(false));
         assertThat(thing.getChannels().get(1).getDefaultTags().contains("tag2"), is(false));
         assertThat(thing.getChannels().get(1).getDefaultTags().contains("tag3"), is(true));
